proof of concept for zooming to diff parts of menu

--- a/index.html
+++ b/index.html
@@ -43,16 +43,37 @@ body
 <br>
 <span>Sides</span>
 <br>
-<span>Desserts</span>
+<span><a href = "#desserts">Desserts</a></span>
 <br>
 <span>Beverages</span>	
 </div>
 
+
 <h2>Appetizers</h2>
+<p>Crab Rangoon</p>
+Chicken Wings
+Spicy Chicken Wings
+
 <h2>Soups</h2>
+Wonton Soup
+Chicken Noodle Soup
+
 <h2>Main Courses</h2>
+Steak and French Fries
+Chicken and Waffles
+Shrimp Lo Mein
+
 <h2>Sides</h2>
-<h2>Desserts</h2>
+Mashed potatos
+
+<h2 id = "desserts">Desserts</h2>
+Icecream Sundaea 
+Apple Pie
+Peach Cobbler
+
 <h2>Beverages</h2>
+Lemonade
+Beer
+
 </body>
 </html>
