--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <!-- Latest compiled and minified CSS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
 <style>
 
 body 
@@ -51,8 +53,8 @@ body
 
 <h2>Appetizers</h2>
 <p>Crab Rangoon</p>
-Chicken Wings
-Spicy Chicken Wings
+<p>Chicken Wings</p>
+<p><i class = "fas fa-pepper-hot"></i>Spicy Chicken Wings</p>
 
 <h2>Soups</h2>
 Wonton Soup
