--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
 <style>
 
 body 
@@ -24,58 +26,92 @@ body
 
 #toc
 {
-	background-color: yellow;
+	background-color: rgb(255, 255, 153);
 	width: 200px;
 	padding: 10px;
 	font-size: 20px;
 	border-radius: 5px;
 }	
+
+hr
+{
+	border-color: red;
+}
+
+.badge
+{
+	background-color: red;
+	color: black;
+}
+
+#menu
+{
+	margin:5px;
+}
+
+img
+{
+	width:300px;
+
+}
 </style>
 <title>Mr. Markham's Pan-Human Cuisine</title>
   </head>
 
 <body>
   <h1><u>Mr. Markham's Pan-Human Cuisine:</u></h1>
+<div id = "menu">
 <div id = "toc">
-<span>Appetizers</span>
+<span><a href = "#appetizers">Appetizers</a></span>
 <br>
-<span>Soups</span>
+<span><a href = "#soups">Soups</a></span>
 <br>
-<span>Main Courses</span>
+<span><a href = "#mainCourses">Main Courses</a></span>
 <br>
-<span>Sides</span>
+<span><a href = "#sides">Sides</a></span>
 <br>
 <span><a href = "#desserts">Desserts</a></span>
 <br>
-<span>Beverages</span>	
+<span><a href = "#beverages">Beverages</a></span>	
 </div>
-
-
-<h2>Appetizers</h2>
-<p>Crab Rangoon</p>
-<p>Chicken Wings</p>
-<p><i class = "fas fa-pepper-hot"></i>Spicy Chicken Wings</p>
-
-<h2>Soups</h2>
-Wonton Soup
-Chicken Noodle Soup
-
-<h2>Main Courses</h2>
-Steak and French Fries
-Chicken and Waffles
-Shrimp Lo Mein
-
-<h2>Sides</h2>
-Mashed potatos
-
+<br>
+<!-- a gallery of 3 or 4 pictures might do nicely here -->
+<hr>
+<img src = "https://www.thespruceeats.com/thmb/dclNqTu9Kr1f6pa9ssZtRchFFCA=/1365x1365/smart/filters:no_upscale()/perfect-banana-split-recipe-305712-13_preview-5b2bd062ba61770054b59b85.jpeg" alt = "sundae">
+<img src = "https://food.fnr.sndimg.com/content/dam/images/food/fullset/2011/2/4/1/RX-FNM_030111-Lighten-Up-012_s4x3.jpg.rend.hgtvcom.826.620.suffix/1382539856907.jpeg" alt = "fettucini alfredo">
+<img src = "https://food.fnr.sndimg.com/content/dam/images/food/fullset/2012/2/1/1/CCKEL301_shrimp-lo-mein_s4x3.jpg.rend.hgtvcom.826.620.suffix/1432986941466.jpeg" alt = "shrimp lo mein">
+<hr>
+<h2 id = "appetizers">Appetizers</h2>
+<p>Crab Rangoon<br>$7.00</p>
+<p>Chicken Wings<br>$5.00</p>
+<p><i class = "fas fa-pepper-hot"></i>Spicy Chicken Wings<br>$5.50</p>
+<p><i class = "fas fa-pepper-hot"></i>Chips and Salsa <span class="badge badge-secondary">New</span><br>$3.50</p>
+<hr>
+<h2 id = "soups">Soups</h2>
+<p>Wonton Soup<br>$5.00</p>
+<p>Chicken Noodle Soup<br>$5.00</p>
+<hr>
+<h2 id = "mainCourses">Main Courses</h2>
+<p>Steak and French Fries <br>$14.00</p>
+<p>Chicken and Waffles <br>$11.00</p>
+<p>Shrimp Lo Mein<br>$12.00</p>
+<p><i class = "fas fa-pepper-hot"></i>Garlic Beef <span class="badge badge-secondary">New</span><br>$10.50</p>
+<p>Fettucini Alfredo <span class="badge badge-secondary">New</span><br>$12.00</p>
+<hr>
+<h2 id = "sides">Sides</h2>
+<p>Mashed potatos<br>$3.00</p>
+<p>Crispy noodles<br>$1.50</p>
+<hr>
 <h2 id = "desserts">Desserts</h2>
-Icecream Sundaea 
-Apple Pie
-Peach Cobbler
-
-<h2>Beverages</h2>
-Lemonade
-Beer
-
+<p>Icecream Sundaea<br>$6.00</p> 
+<p>Apple Pie<br>$3.00</p>
+<p>Peach Cobbler <span class="badge badge-secondary">New</span><br>$4.00</p>
+<hr>
+<h2 id = "beverages">Beverages</h2>
+<p>Lemonade<br>$2.00</p>
+<p>Beer<br>$4.00<br>(Hienieken, Dos Equis, Corona, Bud Light)</p>
+<br>
+<a href = "#toc">Back to top</a>
+</div>
 </body>
 </html>
